// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should dispatch error if fetch fails 1`] = `
Object {
  "error": "Error: Server responded with 404",
  "pullRequests": Array [],
  "receivedAt": 1359075920,
  "status": "error",
  "type": "RECEIVE_PULL_REQUESTS",
}
`;

exports[`actions should fetch list of PRs in repo 1`] = `
Array [
  Object {
    "author": Object {
      "displayName": "Tom",
      "email": "tom@example.com",
      "id": 115026,
      "name": "tom",
    },
    "createdDate": 1359075920,
    "description": "It’s a kludge, but put the tuple from the database in the cache.",
    "link": "http://link/to/pullrequest",
    "reviewers": Array [
      Object {
        "approved": true,
        "lastReviewedCommit": "7549846524f8aed2bd1c0249993ae1bf9d3c9998",
        "user": Object {
          "displayName": "Jane Citizen",
          "email": "jane@example.com",
          "id": 101,
          "name": "jcitizen",
        },
      },
    ],
    "state": "OPEN",
    "title": "Talking Nerdy",
    "updatedDate": 1359085920,
  },
]
`;

exports[`actions should fetch repos and pull requests 1`] = `
Object {
  "error": undefined,
  "pullRequests": Array [
    Object {
      "author": Object {
        "displayName": "Tom",
        "email": "tom@example.com",
        "id": 115026,
        "name": "tom",
      },
      "createdDate": 1359075920,
      "description": "It’s a kludge, but put the tuple from the database in the cache.",
      "link": "http://link/to/pullrequest",
      "reviewers": Array [
        Object {
          "approved": true,
          "lastReviewedCommit": "7549846524f8aed2bd1c0249993ae1bf9d3c9998",
          "user": Object {
            "displayName": "Jane Citizen",
            "email": "jane@example.com",
            "id": 101,
            "name": "jcitizen",
          },
        },
      ],
      "state": "OPEN",
      "title": "Talking Nerdy",
      "updatedDate": 1359085920,
    },
    Object {
      "author": Object {
        "displayName": "Tom",
        "email": "tom@example.com",
        "id": 115026,
        "name": "tom",
      },
      "createdDate": 1359075920,
      "description": "It’s a kludge, but put the tuple from the database in the cache.",
      "link": "http://link/to/pullrequest",
      "reviewers": Array [
        Object {
          "approved": true,
          "lastReviewedCommit": "7549846524f8aed2bd1c0249993ae1bf9d3c9998",
          "user": Object {
            "displayName": "Jane Citizen",
            "email": "jane@example.com",
            "id": 101,
            "name": "jcitizen",
          },
        },
      ],
      "state": "OPEN",
      "title": "Second PR",
      "updatedDate": 1359085920,
    },
  ],
  "receivedAt": 1359075920,
  "status": "success",
  "type": "RECEIVE_PULL_REQUESTS",
}
`;
